--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ color: #333333;
 			}
 		}
 
-		loadJson('plano.json', renderData);
+		loadJson('plano.json?v=3eada1dfcccd497799454947184533b9', renderData);
 	</script>
 </body>
 </html>
